# shipping-doc-analyst

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
docs/installation/: layer_0_commands.sh  layer_minus_1_commands.sh  setup_layer_minus_1.sh
notebooks/: agentic_rag_complete.ipynb  agentic_rag_system.ipynb  ann_demonstration.ipynb
notebooks/faiss_index/: index.faiss  index.pkl
scripts/: analyze_documents.py  setup_layer_0.sh  validate_environment.py
shipping_doc_analyst/config/: settings.py
shipping_doc_analyst/core/: schemas.py
shipping_doc_analyst/scripts/: annotate_documents.py  data_quality_report.py  split_data.py  validate_annotations.py
shipping_doc_analyst/utils/: exceptions.py  logger.py
tests/unit/: test_config.py  test_exceptions.py  test_logger.py
